Adding to App.js

--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "empty-project-template",
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -7,12 +9,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.0",
+    "expo": "^31.0.2",
+    "firebase": "^5.7.3",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-elements": "^1.0.0-beta7",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-vector-icons": "^6.2.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
-  },
-  "private": true
+    "babel-preset-expo": "^5.0.0",
+    "eslint-config-rallycoding": "^3.2.0"
+  }
 }
