--- a/yezzus/app.json
+++ b/yezzus/app.json
@@ -1,13 +1,11 @@
 {
   "expo": {
-    "name": "yezzus",
-    "slug": "yezzus",
+    "name": "YezzusFreezus",
+    "description": "This project is really great.",
+    "slug": "YezzusFreezus",
     "privacy": "public",
-    "sdkVersion": "32.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "sdkVersion": "31.0.0",
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
