--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -16,6 +16,7 @@
     "react-native-elements": "^1.0.0-beta7",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.2.0",
+    "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
