--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "expo": "^31.0.2",
-    "firebase": "^5.7.3",
-    "react": "16.5.0",
+    "firebase": "^5.8.1",
+    "react": "^16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-router-flux": "^4.0.6",
