--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-router-flux": "^4.0.6",
+    "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
