--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "expo": "^31.0.2",
     "firebase": "^5.7.3",
+    "moment": "^2.24.0",
     "react": "16.5.0",
+    "react-moment": "^0.8.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-router-flux": "^4.0.6",
