--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -6,10 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "serve": "node -r esm server/index.js"
   },
   "dependencies": {
+    "esm": "^3.2.15",
     "expo": "^31.0.2",
+    "expo-server-sdk": "^3.2.0",
+    "express": "^4.16.4",
     "firebase": "^5.7.3",
     "moment": "^2.24.0",
     "react": "16.5.0",
