--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -9,7 +9,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "esm": "^3.2.17",
     "expo": "^31.0.2",
+    "expo-server-sdk": "^3.2.0",
+    "express": "^4.16.4",
     "firebase": "^5.7.3",
     "moment": "^2.24.0",
     "react": "16.5.0",
