--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -16,6 +16,7 @@
     "react-moment": "^0.8.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-settings-list": "^1.8.0",
     "react-native-swipeout": "^2.3.6",
