--- a/yezzus/package.json
+++ b/yezzus/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^1.0.0-beta7",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-sectioned-multi-select": "^0.6.5",
     "react-native-settings-list": "^1.8.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^6.2.0",
